// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginForm renders a logged-in view 1`] = `
.c0 {
  background-color: white;
  box-shadow: 4px 0 #4d5256, 0 -4px #4d5256, -4px 0 #4d5256, 0 4px #4d5256;
  color: #212529;
  cursor: pointer;
  display: block;
  font-family: 'Press Start 2P',monospace;
  font-size: 0.65em;
  font-weight: bold;
  line-height: calc(2 * 1.5em);
  margin: 0.5em;
  padding: 0.5em;
}

<div>
  <button
    class="c0"
  >
    Logout
  </button>
</div>
`;

exports[`LoginForm renders a login form 1`] = `
.c1 {
  background-color: white;
  box-shadow: 4px 0 #4d5256, 0 -4px #4d5256, -4px 0 #4d5256, 0 4px #4d5256;
  display: block;
  margin: 0.5em;
  max-width: 450px;
  overflow-x: auto;
  padding: 0.5em;
  white-space: pre-wrap;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #212529;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: 'Press Start 2P',monospace;
  font-size: 0.65em;
  font-weight: bold;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  line-height: calc(2 * 1.5em);
}

.c7 {
  background-color: white;
  box-shadow: 4px 0 #4d5256, 0 -4px #4d5256, -4px 0 #4d5256, 0 4px #4d5256;
  color: #212529;
  cursor: pointer;
  display: block;
  font-family: 'Press Start 2P',monospace;
  font-size: 0.65em;
  font-weight: bold;
  line-height: calc(2 * 1.5em);
  margin: 0.5em;
  padding: 0.5em;
}

.c4 {
  background-color: white;
  border: none;
  box-shadow: 0 4px #4d5256, 0 -4px #4d5256, 4px 0 #4d5256, -4px 0 #4d5256;
  font-family: 'Press Start 2P',monospace;
  line-height: calc(2 * 1.5em);
  margin: 4px;
  outline-color: #212529;
  padding: 0.5rem 1rem;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #4d525666;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  left: 0;
  overflow: auto;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 1;
}

.c6 {
  font-size: 0.5em;
  line-height: 1.5em;
  margin: 1em 0;
  min-height: 3em;
}

.c5 {
  margin: 1em 0 0 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

<div>
  <div
    class="c0"
  >
    <pre
      class="c1"
      type="black"
    >
      <code
        class="c2"
        type="black"
      >
        <form
          class="c3"
        >
          <input
            aria-label="username"
            autocomplete="username"
            class="c4"
            name="username"
            placeholder="username"
            required=""
            type="text"
            value=""
          />
          <div
            class="c5"
          />
          <input
            aria-label="password"
            autocomplete="password"
            class="c4"
            name="password"
            placeholder="password"
            required=""
            type="password"
            value=""
          />
          <div
            class="c6"
          >
            


          </div>
          <button
            class="c7"
          >
            Login
          </button>
        </form>
      </code>
    </pre>
  </div>
</div>
`;

exports[`LoginForm renders a login form with error 1`] = `
.c1 {
  background-color: #ffd7cf;
  box-shadow: 4px 0 #e76e55, 0 -4px #e76e55, -4px 0 #e76e55, 0 4px #e76e55;
  display: block;
  margin: 0.5em;
  max-width: 450px;
  overflow-x: auto;
  padding: 0.5em;
  white-space: pre-wrap;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #ce372b;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: 'Press Start 2P',monospace;
  font-size: 0.65em;
  font-weight: bold;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  line-height: calc(2 * 1.5em);
}

.c7 {
  background-color: white;
  box-shadow: 4px 0 #4d5256, 0 -4px #4d5256, -4px 0 #4d5256, 0 4px #4d5256;
  color: #212529;
  cursor: pointer;
  display: block;
  font-family: 'Press Start 2P',monospace;
  font-size: 0.65em;
  font-weight: bold;
  line-height: calc(2 * 1.5em);
  margin: 0.5em;
  padding: 0.5em;
}

.c4 {
  background-color: white;
  border: none;
  box-shadow: 0 4px #4d5256, 0 -4px #4d5256, 4px 0 #4d5256, -4px 0 #4d5256;
  font-family: 'Press Start 2P',monospace;
  line-height: calc(2 * 1.5em);
  margin: 4px;
  outline-color: #212529;
  padding: 0.5rem 1rem;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #4d525666;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  left: 0;
  overflow: auto;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 1;
}

.c6 {
  font-size: 0.5em;
  line-height: 1.5em;
  margin: 1em 0;
  min-height: 3em;
}

.c5 {
  margin: 1em 0 0 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

<div>
  <div
    class="c0"
  >
    <pre
      class="c1"
      type="error"
    >
      <code
        class="c2"
        type="error"
      >
        <form
          class="c3"
        >
          <input
            aria-label="username"
            autocomplete="username"
            class="c4"
            name="username"
            placeholder="username"
            required=""
            type="text"
            value=""
          />
          <div
            class="c5"
          />
          <input
            aria-label="password"
            autocomplete="password"
            class="c4"
            name="password"
            placeholder="password"
            required=""
            type="password"
            value=""
          />
          <div
            class="c6"
          >
            418: The resulting entity body MAY be short and stout.
          </div>
          <button
            class="c7"
          >
            Login
          </button>
        </form>
      </code>
    </pre>
  </div>
</div>
`;
